# contextself.com

./: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.astro/: data-store.json  settings.json
.astro/collections/: journal.schema.json
api/: analyze.py  local_server.py
src/content/: config.ts
src/content/journal/: decomposing-the-observable-self.md  on-guilt-and-regret.md  on-observing-without-judging.md  on-souls.md  on-starting.md  on-what-photos-remember.md  the-relational-self.md
src/layouts/: Layout.astro
src/pages/: about.astro  analyze.astro  index.astro  projects.astro
src/pages/journal/: [...slug].astro  index.astro
