[project]
name = "contextself-api"
version = "0.1.0"
description = "API for contextself.com image analysis"
requires-python = ">=3.9"
dependencies = [
    "taocore>=0.1.0",
    "taocore-human>=0.2.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.18.0",
    "numpy>=1.24.0",
    "mediapipe>=0.10.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

# For local development with editable installs, create a pyproject.local.toml
# or use: uv pip install -e ../taocore -e ../taocore-human
